--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ langchain==0.3.7
 langchain-community==0.3.7
 wikipedia==1.4.0
 duckduckgo-search==6.3.7
+ddgs
 httpx==0.27.2
 python-dotenv==1.0.1
+pytest==8.4.2
+pytest-asyncio==0.24.0
