--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Ollama settings
 OLLAMA_HOST=http://host.docker.internal:11434
-OLLAMA_MODEL=gemma3
+OLLAMA_MODEL=llama3.2:3b
 
 
 # Weather (Open-Meteo is keyless)
